# chronicle

./: .gitignore  pyproject.toml
chronicle_src/: api_routes.py  main.py  ui_routes.py
public/: createTask.html  createTask_old.html  tasks.html
public/assets/css/: styles.min.css
public/assets/js/: script.min.js
templates/: task.html
